# ASR-EVO

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  pyproject.toml  test_pre.json
asr_evo/: app.py  config.py
asr_evo/audio/: __init__.py  recorder.py
asr_evo/cli/: control.py  insert_test.py  transcribe_file.py
asr_evo/core/: context.py  control.py  controller.py  errors.py  pipeline.py  ports.py  review.py  state.py  style_binding.py
asr_evo/postprocess/: prompts.py  styles.py
asr_evo/providers/: aliyun_asr.py  factory.py  http_retry.py  openai_compat_llm.py  openai_provider.py  request_debug.py
asr_evo/storage/: history.py
asr_evo/ui/: __init__.py  menu.py  text_review.py
data/: asr_evo.sqlite3
docs/: ARCHITECTURE.md
preference_prompt_optimizer/: README.md  __init__.py  asr_evo_history.py  cli.py  core.py  export_asr_evo_history.py  io.py
preference_prompt_optimizer/examples/: TESTING.md  synthetic_user_edits.jsonl  test.jsonl
prompts/: README.md  concise.txt  exact.txt  polished.txt  会议纪要.txt  工作聊天.txt  忠实轻修.md  技术记录.txt  邮件.txt
tests/: test_aliyun_asr.py  test_app.py  test_config.py  test_context.py  test_control.py  test_controller.py  test_errors.py  test_history.py  test_hotkey.py  test_openai_provider.py  test_pipeline.py  test_prompts.py  test_recorder.py  test_request_debug.py  test_review.py  test_style_binding.py  test_styles.py  test_text_review.py  test_tray_menu.py
tests/preference_prompt_optimizer/: test_asr_evo_history.py  test_cli.py  test_io.py  test_optimizer.py
