[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-evo"
version = "0.1.0"
description = "A macOS-first dictation assistant with ASR and LLM post-processing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "sounddevice>=0.4.6",
  "soundfile>=0.12.1",
  "pyobjc-framework-Cocoa>=10.3; sys_platform == 'darwin'",
  "pyobjc-framework-ApplicationServices>=10.3; sys_platform == 'darwin'",
  "pyobjc-framework-AVFoundation>=10.3; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz>=10.3; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
asr-evo = "asr_evo.app:main"
asr-evo-control = "asr_evo.cli.control:main"
asr-evo-transcribe = "asr_evo.cli.transcribe_file:main"
asr-evo-insert-test = "asr_evo.cli.insert_test:main"

[tool.setuptools.packages.find]
include = ["asr_evo*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that call external services and require explicit environment variables",
]
